--- a/Expand-CollapseHeaderWithTabs/Base.lproj/Main.storyboard
+++ b/Expand-CollapseHeaderWithTabs/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +26,7 @@
                             <collectionView clipsSubviews="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6cY-dK-MCT">
                                 <rect key="frame" x="0.0" y="250" width="414" height="646"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewLayout key="collectionViewLayout" id="v0w-59-PyL" customClass="ExpandableFlowLayout" customModule="Expand_CollapseHeaderWithTabs" customModuleProvider="target"/>
+                                <collectionViewLayout key="collectionViewLayout" id="4G0-SP-dGi" customClass="ExpandableFlowLayout" customModule="Expand_CollapseHeaderWithTabs" customModuleProvider="target"/>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="l7q-Ad-0at">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -54,6 +54,7 @@
                     <connections>
                         <outlet property="collectionView" destination="6cY-dK-MCT" id="Weu-gT-ERe"/>
                         <outlet property="heightView" destination="tg5-oh-0wZ" id="hka-Jx-O3G"/>
+                        <outlet property="viewHeader" destination="f7j-pS-od0" id="cxy-Vs-cFf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
